--- a/src/assets/scss/base/typography.scss
+++ b/src/assets/scss/base/typography.scss
@@ -55,6 +55,7 @@ p {
   margin: 0 0 1rem 0;
   padding: 0;
   line-height: 1.2;
+  white-space: pre-line;
 
   &:last-child {
     margin-bottom: 0;
