--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -5,6 +5,9 @@ $color-primary: #A7DDE0;
 $color-primary-active: #6ec7cc;
 $color-secondary: #FFD73E;
 $color-secondary-active: #ffcc0b;
+
+
+$color-purple: rgba(182, 52, 139, 1);
 $color-lightgrey: lightgray;
 
 $color-bg-yellow: #FFD73E;
