--- a/src/assets/scss/components/btn.scss
+++ b/src/assets/scss/components/btn.scss
@@ -1,7 +1,7 @@
 .m-btn {
   display: block;
   position: relative;
-  padding: 0.5em 1em;
+  padding: 0.8em 1em 0.5em 1em;;
   text-decoration: none;
   text-align: center;
   cursor: pointer;
@@ -58,4 +58,24 @@
   background-repeat: no-repeat;
   background-size: 1.65rem;
   transform: translateY(7px);
+}
+
+.m-btn__nav {
+  position: absolute;
+  background: rgba(167,221,224,0.9);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
+  padding: 10px 15px;
+  bottom: 0;
+  cursor: pointer;
+  border-top-right-radius: 10px;
+  transition: background 0.4s;
+
+  &:hover {
+    background: rgba(167,221,224,1);
+  }
+
+  h4 {
+    color: #fff;
+    margin: 0;
+  }
 }
