--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -11,6 +11,7 @@ $color-purple: rgba(182, 52, 139, 1);
 $color-lightgrey: lightgray;
 
 $color-bg-yellow: #FFD73E;
+$color-bg-yellow-dark: #EAAA35;
 
 $app--width: 1020px;
 $app--height: 600px;
