--- a/src/assets/scss/base/typography.scss
+++ b/src/assets/scss/base/typography.scss
@@ -1,9 +1,18 @@
 body,
 input,
 select,
-textarea,
+textarea
+{
+  @include font-semibold();
+  @include font-size(16);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1.4;
+  text-rendering: optimizeLegibility;
+}
+
 button {
-  @include font();
+  @include font-bold();
   @include font-size(16);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,21 +23,29 @@ button {
 a,
 a:visited {
   text-decoration: none;
+  
 }
+a.text {color:$color-bg-yellow;}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
   @include font();
   // color: $color-header;
   line-height: 1.3;
   margin: 0 0 2rem;
   padding: 0;
   letter-spacing: 0.5px;
-  text-transform: uppercase;
+}
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @include font-regular();
+  // color: $color-header;
+  line-height: 1.3;
+  margin: 0 0 2rem;
+  padding: 0;
+  letter-spacing: 0.5px;
 }
 
 h1 {
@@ -54,7 +71,7 @@ h6 {
 p {
   margin: 0 0 1rem 0;
   padding: 0;
-  line-height: 1.2;
+  line-height: 1.4;
   white-space: pre-line;
 
   &:last-child {
