--- a/src/assets/scss/components/btn.scss
+++ b/src/assets/scss/components/btn.scss
@@ -1,4 +1,5 @@
 .m-btn {
+  @include font-bold();
   display: block;
   position: relative;
   padding: 0.7em 1em 0.5em 1em;;
@@ -25,8 +26,7 @@
 .m-btn__primary {
   background: $color-primary;
   color: $color-black;
-  text-transform: uppercase;
-  border-radius: 7.5px;
+  /*border-radius: 7.5px;*/
   box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
   @include font-size(24);
   &:hover {
@@ -40,7 +40,6 @@
 .m-btn__secondary {
   background: $color-secondary;
   color: $color-black;
-  text-transform: uppercase;
   border-radius: 7.5px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.16);
   @include font-size(24);
