Background changes on Intros

--- a/src/assets/scss/components/backgrounds.scss
+++ b/src/assets/scss/components/backgrounds.scss
@@ -31,7 +31,7 @@
   &:before {
     content:' ';
     width: 100%;
-    height: 100%;
+    height:600px;
     background-color: $color-bg-yellow;
     opacity: 0.92;
     position: absolute;
@@ -44,7 +44,7 @@
   &:before {
     content:' ';
     width: 100%;
-    height: 100%;
+    height: 600px;
     background-color: $color-primary;
     opacity: 0.92;
     position: absolute;
@@ -57,7 +57,7 @@
   &:before {
     content:' ';
     width: 100%;
-    height: 100%;
+    height: 600px;
     background-color: $color-purple;
     opacity: 0.92;
     position: absolute;
